--- a/public/index.html
+++ b/public/index.html
@@ -1546,7 +1546,7 @@
       let deviceReconnectAttempts = 0;
 
       const API_TOKEN = "test123";
-      const API_BASE_URL = "http://localhost:3000/api/whatsapp";
+      const API_BASE_URL = "https://wa-server.indosofthouse.com//api/whatsapp";
       const WS_BASE_URL = "ws://localhost:3001";
 
       // Logging functionality
