--- a/public/messages.html
+++ b/public/messages.html
@@ -200,7 +200,7 @@
 
     <script>
       const API_TOKEN = "test123";
-      const API_BASE_URL = "http://localhost:3000/api/whatsapp";
+      const API_BASE_URL = "https://wa-server.indosofthouse.com//api/whatsapp";
       let currentPage = { all: 1, user: 1 };
       const PAGE_SIZE = 50;
 
